[tool.poetry]
name = "data-structures-and-algorithms-python"
version = "0.1.0"
description = ""
authors = ["obiorbitalstar <obiorbitalstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"
pytest-watch = "^4.2.0"
accessify = "^0.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
