[tool.poetry]
name = "data_structures_and_algorithms"
version = "0.1.0"
description = ""
authors = ["obiorbitalstar <obiorbitalstar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
